# mulltiphase_rs

./: .gitignore  .travis.yml  Cargo.toml
examples/: dem_3d_dam_break.rs  dem_granular_1.rs  two_particles_head_on.rs  two_particles_head_on_two_particle_arrays.rs
src/: lib.rs  paraview.rs  particle_array.rs  prelude.rs
src/dem/: mod.rs
tests/: test_dem_physics.rs
